# git_from_scratch

./: '  Cargo.toml  README.md
.github/workflows/: rust_check.yaml  rust_fmt.yaml  rust_test.yaml
.github/workflows/workflows/: rust_clippy.yaml  rust_doc.yaml  rust_test.yaml
src/: cli.rs  lib.rs  main.rs  run.rs
src/cli/: cli.rs
src/git/: cat.rs  cat_file.rs  functionality.rs  git.rs  hash.rs  hash_object.rs  init.rs  ls_tree.rs  mod.rs  parser.rs  utils.rs  write_tree.rs
src/git/parsers/: blob.rs  mod.rs  tree.rs  utils.rs
tests/cli/: main.rs  test_git_cat.rs  test_git_hash.rs  test_git_init.rs  test_git_ls_tree.rs  test_git_write_tree.rs  utils.rs
tests/internal/: main.rs  test_git_cat.rs  test_git_hash.rs  test_git_init.rs  test_git_ls_tree.rs  test_git_write_tree.rs  utils.rs
